--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
   transition: all 0.1s ease;
   transform: translate(0px, -5px);
   fill: var(--primary-color);
-
+  
 }
 
 .intro-sec {
@@ -265,6 +265,10 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+
+.my-pro-heading{
+  margin-left: 100px;
 }
 
 .underline-2 {
@@ -439,7 +443,6 @@
 
 .btn-grad {background-image: linear-gradient(to right, #0844d1 0%, #363795  51%, #3336ed  100%)}
 .btn-grad {
-   margin: 10px;
    padding: 15px 45px;
    text-align: center;
    text-transform: uppercase;
@@ -453,7 +456,7 @@
  }
 
  .btn-grad:hover {
-   background-position: right center; /* change the direction of the change here */
+   background-position: right center; 
    color: #fff;
    text-decoration: none;
  }
@@ -467,6 +470,10 @@
 
 @media screen and (max-width: 600px) {
 
+  .main-logo{
+    display: none;
+  }
+
   .first-div {
     width: 100%;
   }
@@ -478,10 +485,10 @@
   .main-logo {
     margin-left: -15px;
   }
-
-  .logo {
-    margin-left: 0px;
-  }
+.logo{
+  color: var(--main-color);
+  margin: 0px;
+}
 
   .intro-sec {
     display: flex;
@@ -491,7 +498,8 @@
   }
 
   .intro-para {
-    padding-left: 10px;
+    padding-left: 0px;
+    margin-right: 40px;
   }
 
   .intro-div {
@@ -506,6 +514,7 @@
     color: var(--primary-color);
     font-size: 40px;
     line-height: normal;
+
   }
 
   .display-top-res-btn{
@@ -513,17 +522,20 @@
   }
   
 
-  .accont-links {
-    /* border: 1px solid black; */
-    width: 15%;
-    height: 520px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 50px;
+  .link-svg{
+    width: 35px;
+    height:30px;
   }
   .accont-links-div{
+    bottom: 0px;
+    width: 375px;
     left: 0px;
+    flex-direction: row;
+    height: 70px;
+    gap: 40px;
+    box-shadow: none;
+    backdrop-filter: blur(100px);
+    background-color: transparent;
   }
 
   .my-img-div {
@@ -589,7 +601,7 @@
     /* border: 1px solid black; */
     height: 100%;
     width: 100%;
-    padding-left: 60px;
+    padding-left: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -613,14 +625,18 @@
     /* align-items: center; */
     justify-content: center;
     gap: 20px;
-    padding-left: 50px;
+    padding: 0px;
   
   }
+  .my-pro-heading{
+    margin-left: 30px;
+  }
+  
   .projects{
     /* border: 4px solid var(--light-blue); */
     box-shadow: 2px 2px 20px rgb(202, 202, 202);
     height: 350px;
-    width: 320px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     text-decoration: none;
@@ -630,11 +646,29 @@
   }
 
   .contact-section{
-    padding-left: 60px;
+    /* padding-left: 35px; */
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction:column;  .class="contact-para"
+  }
+  .contact-para{
+     margin-left: 30px;
   }
 
+  .span-1{
+    margin-left: 93px;
+  }
+
+  .span-2{
+    margin-left: 35px;
+  }
   .about-media{
-    margin-right: 50px;
+    /* margin-right:40px; */
+  }
+
+  .copy-right{
+    margin-bottom: 60px;
   }
 
 
