--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --main-color: rgb(2, 2, 133);
   --primary-color: #0520a9;
   --light-blue: rgb(48, 48, 252);
-  --gray:gray;
+  --gray: gray;
 }
 
 .body {
@@ -67,7 +67,7 @@
 
 .menu {
   margin-left: 420px;
-  
+
 }
 
 .list {
@@ -102,38 +102,41 @@
   color: var(--light-blue);
 }
 
-.resume-btn{
+.resume-btn {
   border: none;
- 
+
 }
 
-.display-top-res-btn{
+.display-top-res-btn {
   visibility: hidden;
 }
 
 
-.btn-grad-res {background-image: linear-gradient(to right, #0844d1 0%, #363795  51%, #3336ed  100%)}
 .btn-grad-res {
-   margin: 0px;
-   text-align: center;
-   text-transform: uppercase;
-   transition: 0.5s;
-   background-size: 200% auto;
-   color: white;            
-   box-shadow: 0 0 20px #eee;
-   border-radius: 10px;
-   display: block;
-   border: none;
-   height: 50px;
-   width: 100px;
-   font-weight: 400;
- }
+  background-image: linear-gradient(to right, #0844d1 0%, #363795 51%, #3336ed 100%)
+}
 
- .btn-grad-res:hover {
-   background-position: right center; 
-   color: #fff;
-   text-decoration: none;
- }
+.btn-grad-res {
+  margin: 0px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  border: none;
+  height: 50px;
+  width: 100px;
+  font-weight: 400;
+}
+
+.btn-grad-res:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+}
 
 
 .accont-links {
@@ -149,7 +152,7 @@
 
 
 .accont-links-div {
-  position:fixed;
+  position: fixed;
   left: 20px;
   width: 50px;
   height: 220px;
@@ -180,7 +183,7 @@
   transition: all 0.1s ease;
   transform: translate(0px, -5px);
   fill: var(--primary-color);
-  
+
 }
 
 .intro-sec {
@@ -219,7 +222,7 @@
   line-height: 70px;
 }
 
-.project-div{
+.project-div {
   height: 700px;
   width: 100%;
   /* border: 1px solid black; */
@@ -233,7 +236,7 @@
 
 }
 
-.projects{
+.projects {
   /* border: 4px solid var(--gray);x */
   box-shadow: 2px 2px 20px rgb(202, 202, 202);
   height: 320px;
@@ -246,18 +249,18 @@
 
 }
 
-.projects:hover .card{
+.projects:hover .card {
   transition: all 1s ease;
   transform: scale(1.1);
 }
 
-.card{
+.card {
   height: 50%;
   width: 100%;
   /* border: 1px solid black; */
 }
 
-.card-info{
+.card-info {
   background-color: #e0e2ff;
   /* border: 1px solid black; */
   height: 100%;
@@ -267,7 +270,7 @@
   align-items: center;
 }
 
-.my-pro-heading{
+.my-pro-heading {
   margin-left: 100px;
 }
 
@@ -294,18 +297,18 @@
 }
 
 
-.para-2{
+.para-2 {
   line-height: 15px;
   color: rgb(66, 64, 64);
   padding-left: 10px;
   padding-top: 5px;
 }
 
-.projects:hover .para-2{
+.projects:hover .para-2 {
   color: black;
 }
 
-.heading-2{
+.heading-2 {
   color: var(--primary-color);
 
 }
@@ -414,7 +417,7 @@
   align-items: center;
 }
 
-.second-img{
+.second-img {
   height: 500px;
   width: 400px;
   border-radius: 5px;
@@ -428,7 +431,7 @@
   color: var(--light-blue);
 }
 
-.contact-section{
+.contact-section {
   /* border: 1px solid black; */
   width: 100%;
   height: 600px;
@@ -437,40 +440,43 @@
   justify-content: center;
   align-items: center;
   padding-left: 0px;
-  
+
 }
 
 
-.btn-grad {background-image: linear-gradient(to right, #0844d1 0%, #363795  51%, #3336ed  100%)}
 .btn-grad {
-   padding: 15px 45px;
-   text-align: center;
-   text-transform: uppercase;
-   transition: 0.5s;
-   background-size: 200% auto;
-   color: white;            
-   box-shadow: 0 0 20px #eee;
-   border-radius: 10px;
-   display: block;
-   border: none;
- }
+  background-image: linear-gradient(to right, #0844d1 0%, #363795 51%, #3336ed 100%)
+}
 
- .btn-grad:hover {
-   background-position: right center; 
-   color: #fff;
-   text-decoration: none;
- }
+.btn-grad {
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  border: none;
+}
 
- .copy-right{
-  font-family:"Gruppo", serif;
+.btn-grad:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+}
+
+.copy-right {
+  font-family: "Gruppo", serif;
   font-weight: 1000;
- }
+}
 
 
 
 @media screen and (max-width: 600px) {
 
-  .main-logo{
+  .main-logo {
     display: none;
   }
 
@@ -485,10 +491,11 @@
   .main-logo {
     margin-left: -15px;
   }
-.logo{
-  color: var(--main-color);
-  margin: 0px;
-}
+
+  .logo {
+    color: var(--main-color);
+    margin: 0px;
+  }
 
   .intro-sec {
     display: flex;
@@ -517,16 +524,17 @@
 
   }
 
-  .display-top-res-btn{
+  .display-top-res-btn {
     visibility: visible;
   }
-  
 
-  .link-svg{
-    width: 35px;
-    height:30px;
+
+  .link-svg {
+    width: 40px;
+    height: 40px;
   }
-  .accont-links-div{
+
+  .accont-links-div {
     bottom: 0px;
     width: 375px;
     left: 0px;
@@ -612,11 +620,12 @@
     height: 100%;
     /* border: 1px solid black; */
   }
+
   .about-img {
     display: none;
   }
 
-  .project-div{
+  .project-div {
     height: 100%;
     width: 100%;
     /* border: 1px solid black; */
@@ -626,13 +635,14 @@
     justify-content: center;
     gap: 20px;
     padding: 0px;
-  
+
   }
-  .my-pro-heading{
+
+  .my-pro-heading {
     margin-left: 30px;
   }
-  
-  .projects{
+
+  .projects {
     /* border: 4px solid var(--light-blue); */
     box-shadow: 2px 2px 20px rgb(202, 202, 202);
     height: 350px;
@@ -642,32 +652,34 @@
     text-decoration: none;
     border-radius: 20px;
     overflow: hidden;
-  
+
   }
 
-  .contact-section{
+  .contact-section {
     /* padding-left: 35px; */
     justify-content: center;
     align-items: center;
     display: flex;
-    flex-direction:column;  .class="contact-para"
-  }
-  .contact-para{
-     margin-left: 30px;
+    flex-direction: column;
   }
 
-  .span-1{
+  .contact-para {
+    margin-left: 30px;
+  }
+
+  .span-1 {
     margin-left: 93px;
   }
 
-  .span-2{
+  .span-2 {
     margin-left: 35px;
   }
-  .about-media{
+
+  .about-media {
     /* margin-right:40px; */
   }
 
-  .copy-right{
+  .copy-right {
     margin-bottom: 60px;
   }
 
