--- a/style.css
+++ b/style.css
@@ -65,11 +65,6 @@
 
 }
 
-.menu {
-  /* margin-left: 420px; */
-
-}
-
 .list {
   gap: 20px;
 }
@@ -108,7 +103,7 @@
 }
 
 .display-top-res-btn {
-  visibility: hidden;
+  display: none;
 }
 
 
@@ -141,9 +136,9 @@
 
 .accont-links {
   /* border: 1px solid black; */
-  position: relative;
+  /* position: relative; */
   width: 10%;
-  height: 100%;
+  max-height: 100%;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -152,13 +147,16 @@
 
 
 .accont-links-div {
-  position: fixed;
+  position:fixed;
+  bottom: 230px;
   left: 20px;
   width: 50px;
-  height: 220px;
+  height: 250px;
   border-radius: 30px;
-  background-color: #d5dcfd;
-  box-shadow: 1px 1px 10px #eeeeee;
+  background-color: #cfd6f4;
+  /* box-shadow: 1px 1px 10px #eeeeee; */
+  /* border-bottom: 1px solid #7d7e80; */
+  /* border-top:1px solid #7d7e80 ; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,6 +166,74 @@
   max-width: 1200px;
   margin: 0px auto;
 }
+.bowl{
+  position: fixed;
+  bottom: 223px;
+  left: 28px;
+  height: 50px;
+  width: 34px;
+  border-radius: 30px;
+  background-color: #cfd6f4;
+  border-bottom: 1px solid #7d7e80;
+
+}
+.stick{
+  position: fixed;
+  bottom: 0px;
+  left: 43px;
+  border: 2px solid var(--primary-color);
+  height: 223px;
+  width:5px;
+
+}
+
+.stick-2{
+  position: fixed;
+  bottom: 0px;
+  right: 42px;
+  border: 2px solid var(--primary-color);
+  height: 215px;
+  width:5px;
+  z-index: 100;
+}
+
+.stick-3 {
+  position: fixed;
+  bottom: 345px;
+  right: -71px;
+  z-index: 100;
+  transform: rotate(90deg);
+  text-decoration: none;
+  color: rgb(48, 48, 252);
+  font-weight: 400;
+}
+
+.mail-div{
+  /* border: 1px solid black; */
+  background-color: #cfd6f4;
+  height: 270px;
+  width: 30px;
+  position: fixed;
+  right: 21px;
+  bottom: 222px;
+  z-index: 200;
+  width: 50px;
+  border-radius:30px;
+}
+
+.bowl-2{
+  position: fixed;
+  bottom: 215px;
+  right: 28px;
+  height: 50px;
+  width: 34px;
+  border-radius: 30px;
+  background-color: #cfd6f4;
+  border-bottom: 1px solid #7d7e80;
+  z-index:;
+
+}
+
 
 .link-svg {
   transition: all 0.1s ease-out;
@@ -213,13 +279,61 @@
   padding-left: 30px;
 
 }
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes underline {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
 
 .heading-1 {
   font-size: 60px;
   font-weight: 700;
-  font-family: sans-serif;
+  font-family: "Phudu", serif;
   color: var(--primary-color);
   line-height: 70px;
+  display: inline-block;
+  position: relative; /* Required for underline */
+}
+
+/* Typewriter Effect */
+.typewriter {
+  overflow: hidden;
+  white-space: nowrap;
+  display: inline-block;
+  animation: typing 1s steps(30, end) forwards;
+  position: relative;
+  border-bottom: 3px solid var(--primary-color); /* Direct underline */
+  width: 0; /* Initially hidden */
+  animation: typing 4s ease-out forwards;
+  animation: loopTyping 4s ease-out forwards infinite;
+}
+@keyframes loopTyping {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+.heading-3 {
+  font-size: 60px;
+  font-weight: 700;
+  font-family: "Phudu", serif;
+  color: var(--primary-color);
+  line-height: 70px;
+  word-spacing: 7px;
 }
 
 .project-div {
@@ -233,6 +347,7 @@
   justify-content: center;
   gap: 20px;
   padding-left: 50px;
+  padding-right: 50px;
 
 }
 
@@ -313,23 +428,6 @@
 
 }
 
-@keyframes typing {
-  from {
-    width: 0;
-  }
-
-  to {
-    width: 100%;
-  }
-}
-
-.typewriter {
-  font-weight: bold;
-  overflow: hidden;
-  white-space: nowrap;
-  margin: 0px;
-  animation: typing 4s steps(30, end);
-}
 
 
 .para-1 {
@@ -507,6 +605,7 @@
   .intro-para {
     padding-left: 0px;
     margin-right: 40px;
+    line-height: 20px;
   }
 
   .intro-div {
@@ -521,11 +620,26 @@
     color: var(--primary-color);
     font-size: 40px;
     line-height: normal;
+    font-family: "Phudu", serif;
+    font-weight: 600;
+    line-height: 40px;
 
   }
 
+  .heading-3 {
+    font-weight: 700;
+    font-family: sans-serif;
+    color: var(--primary-color);
+    font-size: 40px;
+    line-height: normal;
+    font-family: "Phudu", serif;
+    font-weight: 600;
+    word-spacing: 0px;
+    line-height: 45px;
+  }
+
   .display-top-res-btn {
-    visibility: visible;
+    display: block;
   }
 
 
@@ -676,13 +790,29 @@
     margin-left: 35px;
   }
 
-  .about-media {
-    /* margin-right:40px; */
-  }
-
   .copy-right {
     margin-bottom: 60px;
   }
+  
 
+  .bowl{
+    display: none;
+  
+  }
+  .stick{
+    display: none;
+  }
 
+  .stick-3{
+    display: none;
+  }
+  .stick-2{
+    display: none;
+  }
+  .bowl-2{
+    display: none;
+  }
+  .mail-div{
+    display: none;
+  }
 }
